--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 						<div class="content">
 							<div class="inner">
 								<h1>JAI ARAVIND</h1>
-								<p>Data Scientist, Tech Enthusiast</p>
+								<p>Tech Enthusiast, Emerging Entrepreneur</p>
 							</div>
 						</div>
 						<nav>
