--- a/index.html
+++ b/index.html
@@ -35,12 +35,12 @@
 							<span class="icon fa-diamond"></span>
 						</div>
 						-->
-						<div class="content">
+						<!-- <div class="content">
 							<div class="inner">
 								<h1>JAI ARAVIND</h1>
 								<p>Tech Enthusiast, Emerging Entrepreneur</p>
 							</div>
-						</div>
+						</div> -->
 						<nav>
 							<ul>
 								
