--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
 				<!-- Header -->
 					<header id="header">
 						
-						<div class="logo">
+						<!--<div class="logo">
 							<span class="icon fa-diamond"></span>
-						</div>
+						</div>-->
 						
 						 <div class="content">
 							<div class="inner">
