--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 						 <div class="content">
 							<div class="inner">
 								<h1>JAI ARAVIND</h1>
-								<p>Tech Enthusiast, Emerging Entrepreneur</p>
+								<p>AI Enthusiast | Technology Evangelist</p>
 							</div>
 						</div> 
 						<nav>
